-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: Impala 3.0, Impala 2.12.0
-
Fix Version/s: Impala 3.0, Impala 2.12.0
-
Component/s: Catalog
-
Labels:None
-
Target Version:
-
Epic Color:ghx-label-4
When running TPC-DS for extended period of time, the log is filled with message like the following. It seems better to only log if the catalog version changed.
I0213 11:05:59.765784 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:01.866060 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:03.972636 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:06.075263 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:08.182745 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:10.290714 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:12.389968 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:14.496851 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:16.604372 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:18.706262 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:20.810706 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:22.905510 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:25.002595 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:27.103006 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:29.198388 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:31.303803 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:33.404659 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:35.508891 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:37.612412 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:39.721354 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:41.822686 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:43.913835 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:46.016810 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:48.118794 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:50.222084 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:52.325467 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:54.433518 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:56.540422 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:06:58.643851 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:00.756657 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:02.851954 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:04.957758 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:07.064011 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:09.166529 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:11.271050 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:13.372442 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:15.479159 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:17.583951 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:19.690191 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:21.794742 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:23.893342 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:25.987637 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:28.084777 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1 I0213 11:07:30.191844 148808 impala-server.cc:1359] Catalog topic update applied with version: 88330 new min catalog object version: 1